--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -411,3 +411,16 @@
     align-items: flex-start;
   }
 }
+
+.home-veiculo-img {
+  width: 100%;
+  aspect-ratio: 4 / 3;
+  overflow: hidden;
+  background: #e8e8e8;
+}
+
+.home-veiculo-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
