--- a/frontend/src/pages/Veiculos.css
+++ b/frontend/src/pages/Veiculos.css
@@ -155,6 +155,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: opacity 0.3s;
+  box-shadow: 0 4px 8px rgba(54, 53, 53, 0.57);
 }
 
 .btn-reservar:hover:not(:disabled) {
