--- a/frontend/src/pages/Veiculos.css
+++ b/frontend/src/pages/Veiculos.css
@@ -218,6 +218,16 @@
   background: #e8e8e8;
 }
 
+.home-link {
+  margin: 0;
+  font-size: 30px;
+  font-weight: 4800;
+  color: #6c4791;
+  text-shadow: 0 4px 12px rgba(114, 71, 158, 0.3);
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
 .veiculo-img img {
   width: 100%;
   height: 100%;
